@@ -1,23 +1,6 @@
 <registry>
   <components>
   
-    <component type="theora-encoder">
-      <source location="flumotion.component.encoders.theora.theora"/>
-      <eater name="default"/>
-      <feeder name="default"/>
-      <properties>
-        <property name="feed" type="string" multiple="yes"/>
-        <property name="source" type="string" multiple="no"/>
-        <property name="bitrate" type="int"/>
-        <property name="quality" type="int"/>
-        <property name="keyframe-threshold" type="int" />
-        <property name="keyframe-mindistance" type="int" />
-        <property name="keyframe-maxdistance" type="int" />
-        <property name="quick-compress" type="int" />
-        <property name="noise-sensitivity" type="int" />
-      </properties>
-    </component>
-  
     <component type="smoke-encoder">
       <source location="flumotion.component.encoders.smoke.smoke"/>
       <eater name="default"/>
